# accounting-system

./: .env  .gitignore  Cargo.toml  README.md  deploy.sh
configs/: logrotate.conf  nginx.conf
docs/: README.md
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/assets/styles/: global.css
frontend/public/: manifest.json  offline.html  sw.js
frontend/src/: api.rs  app.rs  error.rs  lib.rs  models.rs  utils.rs
frontend/src/api/: accounts.rs  auth.rs  companies.rs  customers.rs  inventory.rs  journal.rs  mod.rs  reports.rs  tax.rs  vendors.rs
frontend/src/components/: forms.rs  header.rs  layout.rs  lazy_loading.rs  mod.rs  sidebar.rs  tables.rs
frontend/src/components/common/: button.rs  error_boundary.rs  loading.rs  mod.rs  modal.rs
frontend/src/components/features/: mod.rs  offline_indicator.rs
frontend/src/components/forms/: input.rs  mod.rs  select.rs  validated_input.rs  validated_select.rs  validators.rs
frontend/src/components/layout/: app_layout.rs  header.rs  mod.rs  sidebar.rs
frontend/src/components/ui/: button.rs  data_table.rs  mod.rs  status_badge.rs
frontend/src/config/: app_config.rs  mod.rs
frontend/src/hooks/: mod.rs  use_api.rs  use_auth.rs  use_local_storage.rs  use_offline.rs
frontend/src/pages/: accounts.rs  accounts_payable.rs  accounts_receivable.rs  chart_of_accounts.rs  companies.rs  company_management.rs  customers.rs  dashboard.rs  inventory.rs  inventory_management.rs  journal_entries.rs  login.rs  mod.rs  reports.rs  tax.rs  tax_management.rs  vendors.rs
frontend/src/services/: mod.rs  offline.rs  storage.rs
frontend/src/services/api/: accounting_api.rs  auth_api.rs  client.rs  error_handling.rs  mod.rs  reports_api.rs
frontend/src/stores/: app.rs  app_store.rs  auth.rs  auth_store.rs  mod.rs
frontend/src/types/: api.rs  auth.rs  common.rs  forms.rs  journal.rs  mod.rs
frontend/src/utils/: error_handlings.rs  formatting.rs  mod.rs  storage.rs  validation.rs
migrations/: accounts_payable_schema.sql  accounts_receivable_schema.sql  auth_service_schema.sql  chart_of_accounts_schema.sql  company_management_schema.sql  general_ledger_schema.sql  indonesian_tax_schema.sql  inventory_management_schema.sql
scripts/: build-all.sh  check-services.sh  setup-databases.sh  start-services.sh  stop-services.sh
services/accounts-payable/: Cargo.toml
services/accounts-payable/src/: main.rs
services/accounts-payable/src/handlers/: invoices.rs  mod.rs  vendors.rs
services/accounts-payable/src/models/: mod.rs
services/accounts-payable/src/services/: aging_service.rs  mod.rs  payment_service.rs  vendor_service.rs
services/accounts-receivable/: Cargo.toml
services/accounts-receivable/src/: main.rs
services/accounts-receivable/src/handlers/: customers.rs  mod.rs
services/accounts-receivable/src/models/: mod.rs
services/accounts-receivable/src/services/: aging_service.rs  customer_service.rs
services/api-gateway/: Cargo.toml
services/api-gateway/src/: config.rs  main.rs
services/api-gateway/src/routes/: mod.rs
services/api-gateway/src/services/: service_registry.rs
services/auth/: Cargo.toml
services/auth/src/: main.rs
services/auth/src/handlers/: auth.rs  mod.rs
services/auth/src/models/: mod.rs
services/chart-of-accounts/: Cargo.toml
services/chart-of-accounts/src/: main.rs
services/chart-of-accounts/src/services/: chart_service.rs
services/company-management/: Cargo.toml
services/company-management/src/: main.rs
services/company-management/src/services/: company_service.rs
services/general-ledger/: Cargo.toml
services/general-ledger/src/: main.rs
services/general-ledger/src/handlers/: mod.rs
services/general-ledger/src/services/: journal_service.rs  mod.rs
services/indonesian-tax/: Cargo.toml
services/indonesian-tax/src/: main.rs
services/indonesian-tax/src/services/: mod.rs  tax_calculator.rs
services/inventory-management/: Cargo.toml
services/inventory-management/src/: main.rs
services/inventory-management/src/services/: inventory_service.rs  mod.rs
services/reporting/: Cargo.toml
services/reporting/src/: main.rs
services/reporting/src/handlers/: financial_reports.rs  health.rs  mod.rs  reports.rs
services/reporting/src/models/: mod.rs
services/reporting/src/services/: financial_report_service.rs  mod.rs  report_generator.rs  service_registry.rs
shared/auth/: Cargo.toml
shared/auth/src/: extractors.rs  jwt.rs  lib.rs  middleware.rs  models.rs
shared/common/: Cargo.toml
shared/common/src/: config.rs  errors.rs  extractors.rs  health.rs  lib.rs  types.rs
shared/database/: Cargo.toml
shared/database/src/: audit.rs  lib.rs  migrations.rs
shared/utils/: Cargo.toml
shared/utils/src/: currency.rs  date_utils.rs  encryption.rs  formatting.rs  lib.rs  pagination.rs  validation.rs
src/accounts_payable/: Cargo.toml  main.rs
src/accounts_receivable/: Cargo.toml  main.rs
src/api_gateway/: Cargo.toml  main.rs
src/auth/: Cargo.toml  main.rs
src/chart_of_accounts/: Cargo.toml  main.rs
src/company_management/: Cargo.toml  main.rs
src/general_ledger/: Cargo.toml  main.rs
src/indonesian_tax/: Cargo.toml  main.rs
src/inventory_management/: Cargo.toml  main.rs
src/reporting/: Cargo.toml  main.rs
