[workspace]
members = [
    "services/auth",
    "services/company-management", 
    "services/chart-of-accounts",
    "services/general-ledger",
    "services/indonesian-tax",
    "services/accounts-payable",
    "services/accounts-receivable",
    "services/inventory-management",
    "services/reporting",
    "services/api-gateway",
    "shared/common",
    "shared/database",
    "shared/auth",
    "shared/utils"
]
exclude = ["frontend"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "rust_decimal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
rust_decimal = { version = "1.0", features = ["serde-with-str"] }
validator = { version = "0.16", features = ["derive"] }
dotenv = "0.15"
jsonwebtoken = "9.0"
bcrypt = "0.14"