[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "auth-service"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
validator = { workspace = true }
dotenv = { workspace = true }
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }

# Shared crates
common = { path = "../../shared/common" }
database = { path = "../../shared/database" }
auth-shared = { path = "../../shared/auth" }

# Service-specific dependencies
argon2 = "0.5"
rand = "0.8"
lettre = "0.11"