[package]
name = "company-management-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "company-management-service"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
validator = { workspace = true }
dotenv = { workspace = true }

# Shared crates
common = { path = "../../shared/common" }
database = { path = "../../shared/database" }
auth-shared = { path = "../../shared/auth" }
utils = { path = "../../shared/utils" }

# Service-specific dependencies
regex = "1.0"