[package]
name = "indonesian-tax-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "indonesian-tax-service"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rust_decimal = { workspace = true }
validator = { workspace = true }
dotenv = { workspace = true }

# Shared crates
common = { path = "../../shared/common" }
database = { path = "../../shared/database" }
auth-shared = { path = "../../shared/auth" }
utils = { path = "../../shared/utils" }

# Service-specific dependencies
csv = "1.3"
calamine = "0.22"
tempfile = "3.0"