[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
validator = { workspace = true }

# Common-specific dependencies
http = "1.0"